# airl

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/airl-api/: Cargo.toml
crates/airl-api/src/: auth.rs  handlers.rs  lib.rs  models.rs  routes.rs
crates/airl-benches/: Cargo.toml
crates/airl-benches/benches/: compile_bench.rs  interp_bench.rs  ir_bench.rs  typecheck_bench.rs
crates/airl-benches/src/: lib.rs
crates/airl-cli/: Cargo.toml
crates/airl-cli/src/: main.rs
crates/airl-cli/tests/: benchmarks.rs  golden.rs
crates/airl-compile/: Cargo.toml
crates/airl-compile/src/: lib.rs  lower.rs  wasm.rs
crates/airl-interp/: Cargo.toml
crates/airl-interp/src/: lib.rs
crates/airl-interp/tests/: proptest_interp.rs
crates/airl-ir/: Cargo.toml
crates/airl-ir/src/: display.rs  effects.rs  graph.rs  ids.rs  lib.rs  module.rs  node.rs  symbol.rs  types.rs  version.rs
crates/airl-ir/tests/: proptest_ir.rs
crates/airl-patch/: Cargo.toml
crates/airl-patch/src/: apply.rs  impact.rs  inverse.rs  lib.rs  ops.rs  traverse.rs  validate.rs
crates/airl-project/: Cargo.toml
crates/airl-project/src/: constraints.rs  diff.rs  lib.rs  projection.rs  queries.rs  workspace.rs
crates/airl-sdk/: Cargo.toml
crates/airl-sdk/examples/: agent_workflow.rs
crates/airl-sdk/src/: lib.rs
crates/airl-sdk/tests/: integration.rs
crates/airl-typecheck/: Cargo.toml
crates/airl-typecheck/src/: lib.rs
docs/: agent-api.md  architecture.md  evaluation-rubric.md  ir-spec.md  plan.md  roadmap-stage8.md
examples/: agent_harness.js  agent_harness.py  change-greeting.patch.json  concurrency.airl.json  fibonacci.airl.json  file_search.airl.json  fizzbuzz.airl.json  hello.airl.json  http_client.airl.json  json_processor.airl.json  kv_store.airl.json  self_test.airl.json  string_ops.airl.json  web_server.airl.json
examples/multi/: main.airl.json  mathlib.airl.json
