[workspace]
members = [
    "crates/airl-ir",
    "crates/airl-typecheck",
    "crates/airl-interp",
    "crates/airl-compile",
    "crates/airl-patch",
    "crates/airl-project",
    "crates/airl-cli",
    "crates/airl-api",
    "crates/airl-sdk",
]
# airl-benches is intentionally excluded from default workspace builds because
# criterion pulls in windows-sys (needs GCC dlltool) which breaks local
# Windows-GNU developer setups. CI and Unix systems build it on demand via
# `cargo bench --manifest-path crates/airl-benches/Cargo.toml`.
exclude = ["crates/airl-benches"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/osalabs/airl"
homepage = "https://github.com/osalabs/airl"
authors = ["AIRL Contributors"]
keywords = ["ai", "ir", "compiler", "interpreter", "agent"]
categories = ["compilers", "development-tools", "wasm"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }

# Internal crates (version + path for crates.io publishing)
airl-ir = { path = "crates/airl-ir", version = "0.1.0" }
airl-typecheck = { path = "crates/airl-typecheck", version = "0.1.0" }
airl-interp = { path = "crates/airl-interp", version = "0.1.0" }
airl-compile = { path = "crates/airl-compile", version = "0.1.0" }
airl-patch = { path = "crates/airl-patch", version = "0.1.0" }
airl-project = { path = "crates/airl-project", version = "0.1.0" }
airl-api = { path = "crates/airl-api", version = "0.1.0" }
airl-sdk = { path = "crates/airl-sdk", version = "0.1.0" }
