[package]
name = "airl-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "HTTP API server for AIRL agent interactions with Bearer auth"

[dependencies]
airl-ir = { workspace = true }
airl-project = { workspace = true }
airl-interp = { workspace = true }
airl-compile = { workspace = true }
airl-typecheck = { workspace = true }
airl-patch = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
