[package]
name = "airl-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "airl"
path = "src/main.rs"

[dependencies]
airl-ir = { workspace = true }
airl-interp = { workspace = true }
airl-typecheck = { workspace = true }
airl-compile = { workspace = true }
airl-patch = { workspace = true }
airl-api = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
