[package]
name = "airl-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Command-line interface for AIRL: run, compile, type-check, patch, REPL, HTTP API"

[[bin]]
name = "airl"
path = "src/main.rs"

[dependencies]
airl-ir = { workspace = true }
airl-interp = { workspace = true }
airl-typecheck = { workspace = true }
airl-compile = { workspace = true }
airl-patch = { workspace = true }
airl-api = { workspace = true }
airl-project = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
