[package]
name = "airl-compile"
version.workspace = true
edition.workspace = true

[dependencies]
airl-ir = { workspace = true }
thiserror = { workspace = true }
cranelift-codegen = "0.116"
cranelift-frontend = "0.116"
cranelift-module = "0.116"
cranelift-jit = "0.116"
cranelift-native = "0.116"
target-lexicon = "0.12"

[dev-dependencies]
serde_json = { workspace = true }
