[package]
name = "airl-compile"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Cranelift JIT compiler and WASM backend for AIRL IR"

[dependencies]
airl-ir = { workspace = true }
thiserror = { workspace = true }
cranelift-codegen = "0.116"
cranelift-frontend = "0.116"
cranelift-module = "0.116"
cranelift-jit = "0.116"
cranelift-native = "0.116"
target-lexicon = "0.12"
wasm-encoder = "0.246"

[dev-dependencies]
serde_json = { workspace = true }
wasmparser = "0.246"
