[package]
name = "airl-patch"
version.workspace = true
edition.workspace = true

[dependencies]
airl-ir = { workspace = true }
airl-typecheck = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
airl-interp = { workspace = true }
