[package]
name = "airl-patch"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Semantic patch engine for AIRL IR: apply, validate, and invert structural edits"

[dependencies]
airl-ir = { workspace = true }
airl-typecheck = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
airl-interp = { workspace = true }
