[package]
name = "airl-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Typed Rust client for the AIRL HTTP API (create projects, apply patches, typecheck, interpret, compile, query)"

[dependencies]
airl-ir = { workspace = true }
airl-patch = { workspace = true }
airl-project = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ureq = { version = "2", default-features = false }

[dev-dependencies]
airl-api = { workspace = true }
tokio = { workspace = true }
