[package]
name = "airl-typecheck"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Bidirectional type checker for AIRL IR with effect tracking"

[dependencies]
airl-ir = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
